<resources>
    <string name="app_name">Desafio 2 PM190339 CS171609</string>
    <string name="textview_menu1">Realice su orden de compra.</string>
    <string name="textview_menu2">Procesa con su pago.</string>
    <string name="textview_menu3">Historial de ventas.</string>
    <string name="title_medicines">Elija sus medicamentos.</string>
    <string name="title_bills">Realice su compra.</string>
    <string name="title_reports">Historial de compras.</string>
    <string name="textview_clientname">Nombre del cliente.</string>
    <string name="textview_clientdate">Fecha.</string>
    <string name="button_addpurchaseorder">Agregar orden de compra</string>
    <string name="spinner_medicines">Seleccione los medicamentos.</string>
    <string name="spinner_datamedicines">Seleccione</string>
    <string name="textview_medicinename">Nombre del medicamento.</string>
    <string name="textview_medicineprice">Precio del medicamento.</string>
    <string name="textview_medicinequantity">Cantidad.</string>
    <string name="button_addmedicine">Agregar medicamento</string>
    <string name="textview_orderidlegend">Numero de orden:</string>
    <string name="textview_orderidvalue">#</string>
    <string name="textview_clientlegend">Nombre de cliente:</string>
    <string name="textview_clientvalue">Consumidor final</string>
    <string name="textview_datelegend">Fecha de orden:</string>
    <string name="textview_datevalue">dd/mm/aaaa</string>
    <string name="textview_amountlegend">Monto a pagar($):</string>
    <string name="textview_amountvalue">$</string>
    <string name="button_updateamount">Actualizar monto total</string>
    <string name="button_pay">Pagar compra</string>
</resources>